--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -24,6 +24,6 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install invoke sphinx
+        pip install invoke sphinx sphinx_rtd_theme
     - name: Build package
       run: python -m invoke build
