--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -29,4 +29,4 @@ jobs:
     - name: Build package
       run: |
         #cd tasks
-        invoke -c build -r /tasks --list
+        invoke -c build -r ./tasks --list
